# ChangeLog for net-wireless/bluez-utils
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-utils/Attic/ChangeLog,v 1.82 2007/01/15 00:18:50 tester Exp $

  15 Jan 2007; Olivier Crête <tester@gentoo.org>
  +files/bluez-utils-2.25-dinovo-mdl.patch, bluez-utils-2.25-r1.ebuild:
  Add patch for newer logitech BT equipement, fixes bug #144547

  28 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on hppa

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> -bluez-utils-2.25.ebuild:
  removing older ebuilds

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> -files/2.10-r1/pin,
  -files/2.10-r1/pin-helper.sh, -files/2.15-bluepin.patch,
  -files/bluez-utils-2.3-bluepin.patch, -files/2.16/bluetooth.rc,
  -files/bluez-utils-2.3-bluepin-gtk2.patch,
  -files/bluez-utils-2.3-rfcomm_fflush.patch,
  -files/bluez-utils-2.10-handsfree.patch, -files/2.10-r1/bluetooth.rc:
  cleaning out files/

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on ppc.

  26 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on sparc

  25 Jun 2006; Alin Nastac <mrness@gentoo.org> bluez-utils-2.25-r1.ebuild:
  Stable on x86 (#122262).

  19 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
  -files/bluez-utils-2.21-init.d, -files/bluez-utils-2.21-pin,
  -files/bluez-utils-2.21-pin-helper.sh, -bluez-utils-2.19.ebuild,
  -bluez-utils-2.21.ebuild, -bluez-utils-2.22.ebuild:
  Removed old versions, bug #137084.

  14 Jun 2006; Stefan Schweizer <genstef@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Fix cups-1.2 thanks to gentoo user tomaw

*bluez-utils-2.25-r1 (15 May 2006)

  15 May 2006; Roy Marples <uberlord@gentoo.org>
  +bluez-utils-2.25-r1.ebuild:
  Modify bluetooth init script to need dbus when compiled with dbus support.

  14 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bluez-utils-2.24.ebuild:
  Stable on hppa